@@ -106,9 +106,7 @@ public class ScrollbarWidget extends AbstractWidget {
 
     @Override
     public void mouseMoved(final double mouseX, final double mouseY) {
-        final boolean inBounds = mouseX >= getX()
-            && mouseY >= getY()
-            && mouseX <= getX() + width
+        final boolean inBounds = mouseY >= getY()
             && mouseY <= getY() + height;
         if (clicked && inBounds) {
             updateOffset(mouseY);
@@ -147,7 +145,7 @@ public class ScrollbarWidget extends AbstractWidget {
     @Override
     public boolean mouseScrolled(final double x, final double y, final double scrollX, final double scrollY) {
         if (enabled) {
-            final int scrollDirection = Math.max(Math.min(-(int) scrollY, 1), -1);
+            final int scrollDirection = Math.clamp(-(int) scrollY, -1, 1);
             if (smoothScrolling) {
                 startScrollAnimation(scrollDirection);
             } else {
@@ -184,7 +182,7 @@ public class ScrollbarWidget extends AbstractWidget {
     }
 
     public void setOffset(final double offset) {
-        this.offset = Math.min(Math.max(0, offset), maxOffset);
+        this.offset = Math.clamp(offset, 0, maxOffset);
         if (listener != null) {
             listener.accept(this.offset);
         }
